# aetherboot

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build-image.sh  init  test-build.sh
qml/: Main.qml  Theme.qml  qml.qrc
scripts/: build-image.sh
src/: main.cpp
src/backend/: BootEntry.cpp  BootEntry.h  BootHandler.cpp  BootHandler.h  EFIScanner.cpp  EFIScanner.h
